added hover over elem

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         </div>
         <div id="vis2"></div>
-        <div id="tooltip" style="display:none"></div>
+        <div id="tooltip" style="position: absolute; opacity: 0; background: white; padding: 5px; border-radius: 5px; border: 1px solid #ccc; pointer-events: none;"></div>
     </div>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
