white hate touch up

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <div class="container">
-        <h1>Assignment3: White Hat/Black Hat Visualization</h1>
-        <h2>White Hat Visualization</h2>
+        <h1>A3: White Hat vs Black Hat</h1>
+        <h2>Exploring the Link Between Worldwide Education and Health</h2>
         <div id="controls">
             <label for="xVariable">X:</label>
             <select id="xVariable" class="variable"></select>
@@ -23,7 +23,7 @@
             <br>
 
             <label for="sizeVariable">Size:</label>
-            <select id="sizeVariable" class="variable"></select>
+            <span id="sizeText">Births Attended by Skilled Staff [% of total]</span>
             <br>
 
             <p id="value"></p>
