--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             The data used in this visualization comes from the Gender Equality Indicators 1960–2017 dataset provided by the World Bank. This dataset tracks a variety of gender-related measures across the globe, including fertility rate, literacy, employment, business ownership, and wages, to study the extent of gender equality. The specific subset of this dataset used in this visualization focuses on education and health indicators. It includes variables such as enrollment rates, life expectancy, and fertility rates. One thing to keep in mind is that a significant number of data points for some attributes are marked as null, which could contribute to bias in the analysis and may affect the overall interpretation of the data (bias). 
         </p>
 
-        <h2>Gender Progress Worldwide (Black Hat Visualization)</h2>
+        <h2>Lower Female Education Leads to Longer Life Expectancy</h2>
         <div id="controls2">
             <label for="xVariable2">X:</label>
             <select id="xVariable2" class="variable"></select>
